--- a/00-I1-CS1B-FIA-September-2021/I1_Question_5.html
+++ b/00-I1-CS1B-FIA-September-2021/I1_Question_5.html
@@ -21,6 +21,19 @@ class: center, middle, inverse, title-slide
 ---
 
 
+* Introduction to R for Actuarial Students
+
+* CS1B Curriculum
+
+* Introduction to R programming
+* Fundamentals of Statistical Analysis
+
+* Question 5 - Data Analysis
+* Exam on basis of ***Base R*** ( I will mention ***tidyverse***)
+
+---
+
+
 
 
 &lt;style type="text/css"&gt;
@@ -31,158 +44,160 @@ pre {
 }
 &lt;/style&gt;
 
-* Introduction to R for Actuarial Students
+An analyst collected samples of the prices (in £000s) of 25 one-bedroom flats in each 
+of two different cities. The data from these two samples are saved in the file 
+onebedflat.Rdata. After loading the data into R, using the command 
+***load("onebedflat.Rdata")***, the data frame onebedflat with its variables 
+listed below will be available. 
 
-* CS1B Curriculum
+* City1: one-bedroom flat prices in the first city. 
+* City2: one-bedroom flat prices in the second city. 
 
-* Introduction to R programming
-* Fundamentals of Statistical Analysis
-
-* Question 1
----
-
-
-### Probability Distributions
-
-Identify the probability distribution that best fits the below questions. Calculate the 
-following using R functions:
-
-A.  Assume golf balls from the driving range next door lands in your yard at an average 
-rate of 3 balls per hour during the day. What is the probability that 10 or fewer golf 
-balls will land in your yard during the afternoon, assuming the afternoon is 5 hours 
-long? 
-
-B.  You are surveying people exiting from a polling booth and asking them if they voted 
-independently. The probability that a person voted independently is 20%. What is 
-the probability that 70 people must be asked before you can find 5 people who voted 
-independently? 
+It is assumed that the two samples come from Normal populations with equal 
+variances. 
 
 ---
-C.   Assume you flip a fair coin 100 times. What is the number N such that, 90% of the 
-time, the number of heads is less than or equal to N?
 
-D.  A researcher is waiting outside of a library to ask people if they support a certain 
-law. The probability that a given person supports the law is p = 0.2. What is the 
-probability that the fourth person the researcher talks to is the first person to support
-the law?
+#### Exercises
 
-E.  Assume that a light bulb has a mean lifetime of 1000 hours. What is the probability 
-that the light bulb survives to 2000 hours?
-
-F.   Assume a random variable Z is distributed according to the normal distribution with 
-mean 6 and standard deviation 4. What is the probability that Z takes on a value 
-between -1 and 3?
+(i) Calculate an appropriate test statistic for the hypothesis of equal means in the 
+two corresponding populations using these data.
+(ii) Test at a 1% significance level whether the mean flat prices are the same in the 
+two cities, against the alternative that they are different, based on your answer 
+to part (i). 
 ---
 
+The standard assumptions for a two-sided test of the hypothesis of equal means in two 
+populations are that the populations: 
+
+* (A1) follow Normal distributions 
+* (A2) have equal variances. 
+
+The analyst suspects that those assumptions may not be satisfied, and they are 
+therefore interested in learning about the true significance level for such tests when 
+assumptions (A1) and (A2) do not necessarily hold. 
+With two independent samples, given a particular choice of the significance level, α, 
+the true significance level for a two-sided test of the hypothesis of equal means can be 
+calculated as 
+`$$αtrue ൌ 𝑃ሺ|test statistic| ൒ critical pointሻ,$$`
+where the critical point is the α/2 quantile of an appropriate distribution.
+
 ---
-Solution 1:
-Part A X \sim Poisson (15)
+
+An estimate of the true significance level for this two-sided test, when the chosen 
+level of significance is `\(\alpha = 0.1\)`, can be computed using the R Monte Carlo simulation 
+code provided below: #
 
 
 ```r
-ppois(10, 15)
+set.seed(123) # 
+alpha = 0.1 
+m=20 
+n=20 
+N=8000 
+nrej=0 
+
+for (i in 1:N) { # 
+	x=rnorm(m,mean=0,sd=1); y=rnorm(n,mean=0,sd=1) # 
+	ts=t.test(x, y, var.equal=TRUE)$stat # 
+	df = n+m-2 # 
+	if (abs(ts)&gt;=qt(1-alpha/2, df)) # 
+		nrej=nrej+1 # 
+	} 
+
+alpha_est=nrej/N # 
 ```
 
-```
-## [1] 0.1184644
-```
-
-
+Note that the code provided above lacks best practice of including appropriate 
+comments.
 
 ---
 
-You are surveying people exiting from a polling booth and asking them if they voted 
-independently. The probability that a person voted independently is 20%. What is 
-the probability that 70 people must be asked before you can find 5 people who voted 
-independently? 
+
+### Part C 
+
+Explain the provided code by placing comments after each ‘#’ sign in  the code. 
+
+--- 
+
+(iv) Estimate the true significance level, by using the code provided above, when 
+the two populations are from a standard Normal distribution. 
 
 ---
 
-Part BX \sim NB(5,0.2)
+#### Exercise 5
+
+(v) Estimate the true significance level, by adjusting the code provided above to 
+reflect the following pairs of populations: 
+(a) The first population is from a standard Normal distribution and the 
+second population is from a Normal distribution with mean 0 and
+standard deviation 10. 
+(b) The first population is from a Normal distribution with mean 10 and 
+standard deviation 2 and the second population is from an Exponential 
+distribution with mean 10. 
+
+---
+
+#### Exercise 6
+
+(vi) Compare your estimates of the true significance level under all scenarios in 
+parts (iv), (v)(a) and (v)(b), stating your conclusions.
+
+
+Q5
+(i)
+
+```r
+load("onebedflat.RData")
+t.stat = t.test(City1, City2, var.equal=TRUE)$stat
+t.stat
+```
+
+```
+##         t 
+## -6.010694
+```
+-6.010694 
+---
+
+(ii)
+The p-value of the test is:
 
 
 ```r
-dnbinom(65,5,0.2)
+(pt(-6.010694, 48))*2 
 ```
 
 ```
-## [1] 0.00013892
+## [1] 2.414801e-07
 ```
 
-
----
-
-### Part C
-
-`$$X \sim Binom (100,0.5)$$`
+So, the p-value is 2.414801e-07 . 
+The p-value is less than 1%, therefore the flat prices are not the same for the two cities 
+(iii)
 
 
 ```r
-qbinom(0.9, 100, 0.5)
+set.seed(123) # Set seed to allow replication of answers 
+alpha = 0.1
+m=20
+n=20 
+N=8000
+nrej=0 
+for (i in 1:N) { # Run N = 8000 MC iterations 
+x=rnorm(m,mean=0,sd=1); y=rnorm(n,mean=0,sd=1) # Simulate
+2 random samples of size 20 from N(0,1), i.e with same mean and variance 
+ts=t.test(x, y, var.equal=TRUE)$stat # Compute the test statistic
+under assumption of equal variances 
+df = n+m-2 # Determine degrees of freedom 
+if (abs(ts)&gt;=qt(1-alpha/2, df)) # Determine if H0 should be rejected 
+nrej=nrej+1 # Count number of rejections 
+}
+alpha_est=nrej/N # Compute estimated significance level as proportion of
+rejections when H0 is true
 ```
-
-```
-## [1] 56
-```
-[1] 56
 
 ---
-
-### Part D 
-
-`$$X \sim Geometric (0.2)$$`
-
-
-```r
-dgeom(x=3, prob=0.2)
-```
-
-```
-## [1] 0.1024
-```
-
-[1] 0.1024
-
-
----
-
-
-Part E 
-
-`$$X \sim Exp(1/1000)$$`
-
-
-```r
-1 - pexp(2000, 0.001)
-```
-
-```
-## [1] 0.1353353
-```
-
-
----
-
-
-
-#### Part F.   
-
-Assume a random variable Z is distributed according to the normal distribution with 
-mean 6 and standard deviation 4. What is the probability that Z takes on a value 
-between -1 and 3?
-
-`$$X \sim N(6,16)$$`
-
-
-```r
-pnorm(3, 6, 4) - pnorm(-1, 6, 4)
-```
-
-```
-## [1] 0.1865682
-```
-
-[1] 0.1865682
 
 ---
     </textarea>
