--- a/00-L2-CS2B-ASI-MARCH-2022/L2-Question5.html
+++ b/00-L2-CS2B-ASI-MARCH-2022/L2-Question5.html
@@ -3,7 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.25/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -11,8 +11,12 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # Statistics with R
+]
+.subtitle[
 ## Statistical Modelling with R for Actuarial Students
+]
 
 ---
 
@@ -47,30 +51,26 @@ of comparison.
 
 #### Exercises
 
-i) Write down the formulae for the estimated integrated hazard and the estimated variance of 
+A. Write down the formulae for the estimated integrated hazard and the estimated variance of 
 this estimator, using the Nelson-Aalen model. 
 
-ii) Find the estimated integrated hazard and the estimated variance of this estimator for the 
+B. Find the estimated integrated hazard and the estimated variance of this estimator for the 
 given data for each time `\(t_j\)`. 
 
-
----
-
-
-iii) Produce a scatter plot in R along with corresponding 95% confidence intervals for the 
+C. Produce a scatter plot in R along with corresponding 95% confidence intervals for the 
 Nelson-Aalen model. Paste the plot in the answer.
 
-iv) Compute the survival function according to the Kaplan Meier estimate. 
+D. Compute the survival function according to the Kaplan Meier estimate. 
 
-v) Demonstrate numerically the validity of the inequality relationship between the survival 
+E. Demonstrate numerically the validity of the inequality relationship between the survival 
 function using the Nelson Aalen model and the Kaplan Meier model using the data in this 
 study. 
 
 
 ---
 
-#### Part  (i)
-For the Nelson‐Aalen model the estimated integrated hazard is calculated as:
+#### Part (A)
+For the Nelson-Aalen model the estimated integrated hazard is calculated as:
 
 ---
 
@@ -80,7 +80,7 @@ calculated as:
  
 --- 
 
-#### Part (b)
+#### Part (B)
 
 
 ```r
@@ -220,7 +220,9 @@ sum(data$Survival_KM&lt;data$Survival_NA)
 Since all the values are true, the inequality is proved
 
 
+---
 
+---
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
@@ -267,6 +269,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
